# spicy-os-1

./: Cargo.toml  README.md  justfile  linker64.x
.cargo/: config
spicy-os/: Cargo.toml
spicy-os/src/: interrupt.rs  main.rs
src/: algo.rs  driver.rs  fs.rs  kernel.rs  main.rs  mem.rs  process.rs  thread.rs
src/driver/: block.rs  device_tree.rs  mod.rs  ns16550a.rs  virtio.rs
src/driver/virtio/: virtio_blk.rs  virtio_mmio.rs
src/fs/: inode_ext.rs  stdin.rs  stdout.rs
src/kernel/: condvar.rs  fs.rs  process.rs  syscall.rs
src/mem/: address.rs  frame.rs  mapping.rs  memory_set.rs  mod.rs  page_table.rs  page_table_entry.rs  segment.rs
src/process/: kernel_stack.rs  processor.rs  thread.rs
