[package]
name = "spicy-os"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-sbi-rt = { version = "*", path = "../riscv-sbi-rt" }
riscv-sbi = { version = "*", path = "../riscv-sbi" }
riscv = "0.6"

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.spin]
version = "*"
