[package]
name = "spicy-os"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.8.1"
riscv-sbi-rt = { version = "*", path = "../riscv-sbi-rt" }
riscv-sbi = { version = "*", path = "../riscv-sbi" }
riscv = { version = "0.6", features = ["inline-asm"] }
bitflags = "1"
bit_field = "0.10"
hashbrown = "0.8"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.spin]
version = "0.5"
